// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card Renders the UI snapshot correctly 1`] = `
<div
  className="css-1u8qly9"
  id="regularCard"
>
  <div
    className="css-0"
  >
    <div
      className="css-0"
      data-testid="test"
    >
      <img
        alt="Alt text"
        className="css-0"
        src="https://placeimg.com/400/200/arch"
      />
    </div>
  </div>
  <div
    className="card-body css-0"
  >
    <h3
      className="chakra-heading css-1xdhyk6"
      id="heading1"
      layout="column"
    >
      The Card Heading
    </h3>
    <div
      className="css-1xdhyk6"
    >
      middle column content
    </div>
    <div
      className="css-1xdhyk6"
    >
      <button
        className="chakra-button css-1xdhyk6"
        id="button1"
        onClick={[Function]}
        type="submit"
      >
        Example CTA
      </button>
    </div>
  </div>
</div>
`;

exports[`Card Renders the UI snapshot correctly 2`] = `
<div
  className="edition-card css-1u8qly9"
  id="cardWithExtendedStyles"
>
  <div
    className="css-0"
  >
    <div
      className="css-0"
      data-testid="test"
    >
      <img
        alt="Alt text"
        className="css-0"
        src="https://placeimg.com/300/400/arch"
      />
    </div>
  </div>
  <div
    className="card-body css-0"
  >
    <h2
      className="chakra-heading css-1xdhyk6"
      id="editioncardheading1"
      layout="column"
    >
      The Card Heading
    </h2>
    <div
      className="css-1xdhyk6"
    >
      <div>
        Published in New York by Random House
      </div>
      <div>
        Written in English
      </div>
      <div>
        License: Creative Commons Attribution-NonCommercial-NoDerivatives 4.0 International
      </div>
    </div>
    <div
      className="css-1xdhyk6"
    >
      <a
        className="css-1xdhyk6"
        href="online"
        id="link-online"
        rel={null}
        target={null}
      >
        Read Online
      </a>
      <a
        className="css-1xdhyk6"
        href="#url"
        id="link-icon"
        rel={null}
        target={null}
      >
        <svg
          aria-hidden={true}
          className="chakra-icon css-1grhd2q"
          focusable={false}
          id="icon-cardWithExtendedStyles"
          role="img"
          title="download icon"
          viewBox="0 0 24 24"
        >
          <g
            stroke="currentColor"
            strokeWidth="1.5"
          >
            <path
              d="M9,9a3,3,0,1,1,4,2.829,1.5,1.5,0,0,0-1,1.415V14.25"
              fill="none"
              strokeLinecap="round"
            />
            <path
              d="M12,17.25a.375.375,0,1,0,.375.375A.375.375,0,0,0,12,17.25h0"
              fill="currentColor"
              strokeLinecap="round"
            />
            <circle
              cx="12"
              cy="12"
              fill="none"
              r="11.25"
              strokeMiterlimit="10"
            />
          </g>
        </svg>
        Download
      </a>
    </div>
  </div>
</div>
`;

exports[`Card Renders the UI snapshot correctly 3`] = `
<div
  className="edition-card css-1u8qly9"
  id="cardWithNoCTAs"
>
  <div
    className="css-0"
  >
    <div
      className="css-0"
      data-testid="test"
    >
      <img
        alt="Alt text"
        className="css-0"
        src="https://placeimg.com/300/400/arch"
      />
    </div>
  </div>
  <div
    className="card-body css-0"
  >
    <h2
      className="chakra-heading css-1xdhyk6"
      id="editioncardheading1"
      layout="column"
    >
      The Card Heading
    </h2>
    <div
      className="css-1xdhyk6"
    >
      <p>
        Published in New York by Random House
      </p>
      <p>
        Written in English
      </p>
      <p>
        Under Creative Commons License
      </p>
    </div>
  </div>
</div>
`;

exports[`Card Renders the UI snapshot correctly 4`] = `
<div
  className="edition-card css-1u8qly9"
  id="cardWithNoContent"
>
  <div
    className="css-0"
  >
    <div
      className="css-0"
      data-testid="test"
    >
      <img
        alt="Alt text"
        className="css-0"
        src="https://placeimg.com/300/400/arch"
      />
    </div>
  </div>
  <div
    className="card-body css-0"
  >
    <h2
      className="chakra-heading css-1xdhyk6"
      id="editioncardheading1"
      layout="column"
    >
      <a
        className="css-1xdhyk6"
        href="#edition-link"
        id="editioncardheading1-link"
        rel={null}
        target={null}
      >
        The Card Heading
      </a>
    </h2>
    <div
      className="css-1xdhyk6"
    >
      <a
        className="css-1xdhyk6"
        href="online"
        id="link-online"
        rel={null}
        target={null}
      >
        Read Online
      </a>
      <a
        className="css-1xdhyk6"
        href="#url"
        id="link-icon"
        rel={null}
        target={null}
      >
        <svg
          aria-hidden={true}
          className="chakra-icon css-1grhd2q"
          focusable={false}
          id="icon-cardWithNoContent"
          role="img"
          title="download icon"
          viewBox="0 0 24 24"
        >
          <g
            stroke="currentColor"
            strokeWidth="1.5"
          >
            <path
              d="M9,9a3,3,0,1,1,4,2.829,1.5,1.5,0,0,0-1,1.415V14.25"
              fill="none"
              strokeLinecap="round"
            />
            <path
              d="M12,17.25a.375.375,0,1,0,.375.375A.375.375,0,0,0,12,17.25h0"
              fill="currentColor"
              strokeLinecap="round"
            />
            <circle
              cx="12"
              cy="12"
              fill="none"
              r="11.25"
              strokeMiterlimit="10"
            />
          </g>
        </svg>
        Download
      </a>
    </div>
  </div>
</div>
`;

exports[`Card Renders the UI snapshot correctly 5`] = `
<div
  className="edition-card css-1u8qly9"
  id="cardWithNoImage"
>
  <div
    className="card-body css-0"
  >
    <h2
      className="chakra-heading css-1xdhyk6"
      id="editioncardheading1"
      layout="column"
    >
      <a
        className="css-1xdhyk6"
        href="#edition-link"
        id="editioncardheading1-link"
        rel={null}
        target={null}
      >
        The Card Heading
      </a>
    </h2>
    <div
      className="css-1xdhyk6"
    >
      middle column content
    </div>
    <div
      className="css-1xdhyk6"
    >
      <a
        className="css-1xdhyk6"
        href="online"
        id="link-online"
        rel={null}
        target={null}
      >
        Read Online
      </a>
      <a
        className="css-1xdhyk6"
        href="#url"
        id="link-icon"
        rel={null}
        target={null}
      >
        <svg
          aria-hidden={true}
          className="chakra-icon css-1grhd2q"
          focusable={false}
          id="icon-cardWithNoImage"
          role="img"
          title="download icon"
          viewBox="0 0 24 24"
        >
          <g
            stroke="currentColor"
            strokeWidth="1.5"
          >
            <path
              d="M9,9a3,3,0,1,1,4,2.829,1.5,1.5,0,0,0-1,1.415V14.25"
              fill="none"
              strokeLinecap="round"
            />
            <path
              d="M12,17.25a.375.375,0,1,0,.375.375A.375.375,0,0,0,12,17.25h0"
              fill="currentColor"
              strokeLinecap="round"
            />
            <circle
              cx="12"
              cy="12"
              fill="none"
              r="11.25"
              strokeMiterlimit="10"
            />
          </g>
        </svg>
        Download
      </a>
    </div>
  </div>
</div>
`;

exports[`Card Renders the UI snapshot correctly 6`] = `
<div
  className="chakra-linkbox css-113b4ge"
  id="fullclick"
>
  <div
    className="css-0"
  >
    <div
      className="css-0"
      data-testid="test"
    >
      <img
        alt="Alt text"
        className="css-0"
        src="https://placeimg.com/400/200/arch"
      />
    </div>
  </div>
  <div
    className="card-body css-0"
  >
    <h3
      className="chakra-heading css-1xdhyk6"
      id="heading1"
      layout="column"
    >
      <a
        className="chakra-linkbox__overlay css-kvj8dg"
        href="http://nypl.org"
      >
        The Card Heading
      </a>
    </h3>
    <div
      className="css-1xdhyk6"
    >
      middle column content
    </div>
    <div
      className="css-1xdhyk6"
    >
      <button
        className="chakra-button css-1xdhyk6"
        id="button1"
        onClick={[Function]}
        type="submit"
      >
        Example CTA
      </button>
    </div>
  </div>
</div>
`;

exports[`Card Renders the UI snapshot correctly 7`] = `
<div
  className="css-1u8qly9"
  id="cardID"
>
  <div
    className="css-0"
  >
    <div
      className="css-0"
      data-testid="test"
    >
      <img
        alt="Alt text"
        className="css-0"
        src="https://placeimg.com/400/200/arch"
      />
    </div>
  </div>
  <div
    className="card-body css-0"
  >
    <h3
      className="chakra-heading css-1xdhyk6"
      id="heading1"
      layout="column"
    >
      The Card Heading
    </h3>
    <div
      className="css-1xdhyk6"
    >
      middle column content
    </div>
    <div
      className="css-1xdhyk6"
    >
      <button
        className="chakra-button css-1xdhyk6"
        id="button1"
        onClick={[Function]}
        type="submit"
      >
        Example CTA
      </button>
    </div>
    <div
      className="css-1xdhyk6"
    >
      <button
        className="chakra-button css-1xdhyk6"
        id="button2"
        onClick={[Function]}
        type="submit"
      >
        Example CTA
      </button>
    </div>
  </div>
</div>
`;

exports[`Card Renders the UI snapshot correctly 8`] = `
<div
  className="css-2bbtg1"
  id="chakraProps"
>
  <div
    className="css-0"
  >
    <div
      className="css-0"
      data-testid="test"
    >
      <img
        alt="Alt text"
        className="css-0"
        src="https://placeimg.com/400/200/arch"
      />
    </div>
  </div>
  <div
    className="card-body css-0"
  >
    <h3
      className="chakra-heading css-1ss7kwh"
      id="heading1"
      layout="column"
    >
      The Card Heading
    </h3>
    <div
      className="css-1rn2qcq"
    >
      middle column content
    </div>
    <div
      className="css-1avkygu"
    >
      <button
        className="chakra-button css-1xdhyk6"
        id="button1"
        onClick={[Function]}
        type="submit"
      >
        Example CTA
      </button>
    </div>
  </div>
</div>
`;

exports[`Card Renders the UI snapshot correctly 9`] = `
<div
  className="css-1u8qly9"
  data-testid="card-testid"
  id="otherProps"
>
  <div
    className="css-0"
  >
    <div
      className="css-0"
      data-testid="test"
    >
      <img
        alt="Alt text"
        className="css-0"
        src="https://placeimg.com/400/200/arch"
      />
    </div>
  </div>
  <div
    className="card-body css-0"
  >
    <h3
      className="chakra-heading css-1ss7kwh"
      id="heading1"
      layout="column"
    >
      The Card Heading
    </h3>
    <div
      className="css-1xdhyk6"
      data-testid="cardcontent-testid"
    >
      middle column content
    </div>
    <div
      className="css-1xdhyk6"
      data-testid="cardaction-testid"
    >
      <button
        className="chakra-button css-1xdhyk6"
        id="button1"
        onClick={[Function]}
        type="submit"
      >
        Example CTA
      </button>
    </div>
  </div>
</div>
`;
